--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/anton": "^5.2.6",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-menubar": "^1.1.15",
     "@react-three/fiber": "^9.2.0",
+    "@tabler/icons-react": "^3.34.0",
     "@tailwindcss/vite": "^4.1.11",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "@types/three": "^0.178.1",
+    "aceternity-ui": "^0.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
