--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/anton": "^5.2.6",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-menubar": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-three/fiber": "^9.2.0",
     "@tabler/icons-react": "^3.34.0",
     "@tailwindcss/vite": "^4.1.11",
@@ -21,14 +22,17 @@
     "@tsparticles/slim": "^3.8.1",
     "@types/three": "^0.178.1",
     "aceternity-ui": "^0.2.2",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.5",
     "lucide-react": "^0.525.0",
-    "motion": "^12.23.3",
+    "motion": "^12.23.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
+    "react-spinners": "^0.17.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "three": "^0.178.0"
