--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.5",
+    "gsap": "^3.13.0",
+    "lightswind": "^3.0.6",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.5",
     "react": "^19.1.0",
@@ -36,7 +38,8 @@
     "react-spinners": "^0.17.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
-    "three": "^0.178.0"
+    "three": "^0.178.0",
+    "threejs-toys": "^0.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
